// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ButtonBurgerShape Default 1`] = `
<ForwardRef(ButtonBurgerShapecomponent__BurgerShape)
  onClick={[Function]}
>
  <ForwardRef(ButtonBurgerShapecomponent__ButtonText)>
     20 
  </ForwardRef(ButtonBurgerShapecomponent__ButtonText)>
</ForwardRef(ButtonBurgerShapecomponent__BurgerShape)>
`;

exports[`Storyshots H1 Default 1`] = `
<ForwardRef(H1component__H1Default)>
   Hello I am a Title 
</ForwardRef(H1component__H1Default)>
`;

exports[`Storyshots H2 Default 1`] = `
<ForwardRef(H2component__H2Default)>
   Hello I am a Title 
</ForwardRef(H2component__H2Default)>
`;

exports[`Storyshots Input Default 1`] = `
<ForwardRef(Inputcomponent__InputContainer)>
  <ForwardRef(Inputcomponent__Label)>
    Insert here something
  </ForwardRef(Inputcomponent__Label)>
  <ForwardRef(Inputcomponent__InputField)
    label="Insert here something"
  />
</ForwardRef(Inputcomponent__InputContainer)>
`;

exports[`Storyshots RecipeCard Default 1`] = `
<ForwardRef(RecipeCardcomponent__CardContainer)>
  <ForwardRef(RecipeCardcomponent__Title)>
    Chocolate Cake
  </ForwardRef(RecipeCardcomponent__Title)>
  <ForwardRef(RecipeCardcomponent__ImageIngredientsAndLink)>
    <ForwardRef(RecipeCardcomponent__ImageContainer)
      image="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    />
    <ForwardRef(RecipeCardcomponent__IngredientsAndLink)>
      chocolat, cake, chocolate cake
      <a
        href="http://siteweb.site.web"
      >
         Lien vers la recette 
      </a>
    </ForwardRef(RecipeCardcomponent__IngredientsAndLink)>
  </ForwardRef(RecipeCardcomponent__ImageIngredientsAndLink)>
</ForwardRef(RecipeCardcomponent__CardContainer)>
`;

exports[`Storyshots RecipeCardsContainer with 1 cards 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "RecipeCardsContainercomponent__RecipeCardsContainer-sc-10i2ub7-0",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-direction:row;flex-wrap:wrap;justify-content:center;margin:",
          "20px",
          " 0;",
        ],
      },
      "displayName": "RecipeCardsContainercomponent__RecipeCardsContainer",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "RecipeCardsContainercomponent__RecipeCardsContainer-sc-10i2ub7-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
</StyledComponent>
`;

exports[`Storyshots RecipeCardsContainer with 5 cards 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "RecipeCardsContainercomponent__RecipeCardsContainer-sc-10i2ub7-0",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-direction:row;flex-wrap:wrap;justify-content:center;margin:",
          "20px",
          " 0;",
        ],
      },
      "displayName": "RecipeCardsContainercomponent__RecipeCardsContainer",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "RecipeCardsContainercomponent__RecipeCardsContainer-sc-10i2ub7-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
</StyledComponent>
`;

exports[`Storyshots RecipeCardsContainer with 10 cards 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "RecipeCardsContainercomponent__RecipeCardsContainer-sc-10i2ub7-0",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-direction:row;flex-wrap:wrap;justify-content:center;margin:",
          "20px",
          " 0;",
        ],
      },
      "displayName": "RecipeCardsContainercomponent__RecipeCardsContainer",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "RecipeCardsContainercomponent__RecipeCardsContainer-sc-10i2ub7-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
  <RecipeCard
    href="http://siteweb.site.web"
    ingredients="chocolat, cake, chocolate cake"
    thumbnail="https://upload.wikimedia.org/wikipedia/commons/d/df/Chocolate_cake.jpg"
    title="Chocolate Cake"
  />
</StyledComponent>
`;

exports[`Storyshots SelectionButton Default 1`] = `
<ForwardRef(SelectionButtoncomponent__ButtonsContainer)>
  <ForwardRef(SelectionButtoncomponent__SingleButton)
    isActive={false}
    onClick={[Function]}
  >
    option 1
  </ForwardRef(SelectionButtoncomponent__SingleButton)>
  <ForwardRef(SelectionButtoncomponent__SingleButton)
    isActive={false}
    onClick={[Function]}
  >
    option 2
  </ForwardRef(SelectionButtoncomponent__SingleButton)>
</ForwardRef(SelectionButtoncomponent__ButtonsContainer)>
`;

exports[`Storyshots SelectionButton Option 2 is active 1`] = `
<ForwardRef(SelectionButtoncomponent__ButtonsContainer)>
  <ForwardRef(SelectionButtoncomponent__SingleButton)
    isActive={false}
    onClick={[Function]}
  >
    option 1
  </ForwardRef(SelectionButtoncomponent__SingleButton)>
  <ForwardRef(SelectionButtoncomponent__SingleButton)
    isActive={true}
    onClick={[Function]}
  >
    option 2
  </ForwardRef(SelectionButtoncomponent__SingleButton)>
</ForwardRef(SelectionButtoncomponent__ButtonsContainer)>
`;

exports[`Storyshots StyleGuide Colors 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "StyleGuidestory__StorybookDiv-t49j7l-0",
        "isStatic": false,
        "rules": Array [],
      },
      "displayName": "StyleGuidestory__StorybookDiv",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "StyleGuidestory__StorybookDiv-t49j7l-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <ForwardRef(StyleGuidestory__StorybookTitle)>
    Couleurs
  </ForwardRef(StyleGuidestory__StorybookTitle)>
  <ForwardRef(StyleGuidestory__ColorsContainer)>
    <ColorsComponent />
  </ForwardRef(StyleGuidestory__ColorsContainer)>
</StyledComponent>
`;

exports[`Storyshots StyleGuide Polices 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "StyleGuidestory__StorybookDiv-t49j7l-0",
        "isStatic": false,
        "rules": Array [],
      },
      "displayName": "StyleGuidestory__StorybookDiv",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "StyleGuidestory__StorybookDiv-t49j7l-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <ForwardRef(StyleGuidestory__StorybookTitle)>
    Polices
  </ForwardRef(StyleGuidestory__StorybookTitle)>
  <ForwardRef(StyleGuidestory__PlayfairDisplaytRegular)>
     Ceci est la police 1 Regular 
  </ForwardRef(StyleGuidestory__PlayfairDisplaytRegular)>
  <br />
  <ForwardRef(StyleGuidestory__PlayfairDisplayBold)>
     Ceci est la police 1 Bold 
  </ForwardRef(StyleGuidestory__PlayfairDisplayBold)>
  <br />
</StyledComponent>
`;
